--- a/dev/parts/Sections/minibanners.html
+++ b/dev/parts/Sections/minibanners.html
@@ -1,4 +1,4 @@
-<section class="minibanners">
+<section class="minibannerss">
     <div class="container">
         <div class="minibanners__container">
             <div class="minibanners__items">
